Made some changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Yo! This is abhi.
+            <h4>Heya</h4>
+            Some local changes were made
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
