--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,10 +1,13 @@
 <html>
-    <head> <title>Article-One</title></head>
+    <head> 
+    <title>Article-One</title>
+    <meta name="viewport" content="width-device-width, initial-scale=1"/>
+    </head>
     <body>
         <div>
             <a href = '/'>Home</a>
         </div>
-        </hr>
+        <hr/>
         <h3>
             Article-One
         </h3>
