--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,11 +5,13 @@
     </head>
     <style>
         .container{
-            max-width:800px;
-            margin:0 auto;
-            font-family: sans-serif;
-            color:grey;
-            
+         max-width: 800px;
+        margin: 0 auto;
+        font-family: sans-serif;
+        color: #881414;
+        padding-top: 60px;
+        padding-left: 20px;
+        padding-right: 20px;
             
         }
     </style>
