--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -2,6 +2,18 @@
     <head> 
     <title>Article-Three</title>
     <meta name="viewport" content="width-device-width, initial-scale=1"/> 
+     <style>
+        .container{
+         max-width: 800px;
+        margin: 0 auto;
+        font-family: sans-serif;
+        color: #881414;
+        padding-top: 60px;
+        padding-left: 20px;
+        padding-right: 20px;
+            
+        }
+    </style>
     </head>
     <body>
         <div>
