[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,7 +1,19 @@
 <html>
     <head> 
-    <title>Article-One</title>
-    <meta name="viewport" content="width-device-width, initial-scale=1"/> 
+    <title>Article-Two</title>
+    <meta name="viewport" content="width-device-width, initial-scale=1"/>
+     <style>
+        .container{
+         max-width: 800px;
+        margin: 0 auto;
+        font-family: sans-serif;
+        color: #881414;
+        padding-top: 60px;
+        padding-left: 20px;
+        padding-right: 20px;
+            
+        }
+    </style>
     </head>
     <body>
         <div>
@@ -16,7 +28,7 @@
         </div>
         <div>
             <p>
-                Content for the first article is displayed here
+                Content for the second article is displayed here
             </p>
             
             <p>
