--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             <div>Myself Abhimanyue</div>
             <h3>Education</h3>
             <div>I study at HKU</div>
-            <div class = "footer"> </div>
+            <div class = "footer"> This button <button id = 'counter'>Click Me!</button> has been clicked <span id='count'>0</span> times. </div>
             
             <br>
            </div>
