--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
             <input type = "text" id = "name" placeholder="name"></input>
             <hr/>
             
-            <input type  = "submit" value = "submit"></input>
+            <input type  = "submit" value = "lund"></input>
             <ul>
                 <li>Name1</li>
                 <li>Name2</li>
