[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,10 +15,10 @@
             <div class = "footer"> This button <button id = 'counter'>Click Me!</button> has been clicked <span id='count'>0</span> times. </div>
             <br/>
             <hr/>
-            <input type = "text" id = "name" placeholder="name"></input>
+            <input type = "text" id = "name" placeholder="lund"></input>
             <hr/>
             
-            <input type  = "submit" value = "lund"></input>
+            <input type  = "submit" value = "submit"></input>
             <ul>
                 <li>Name1</li>
                 <li>Name2</li>
