--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
             <div class = "footer"> This button <button id = 'counter'>Click Me!</button> has been clicked <span id='count'>0</span> times. </div>
             <br/>
             <hr/>
-            <input type = "text" id = "name" placeholder="lund"></input>
+            <input type = "text" id = "name" placeholder="type your name here"></input>
             <hr/>
             
             <input type  = "submit" value = "submit"></input>
